<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/nombre_restaurante"
            android:textColor="@color/title_color"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            android:gravity="center">

            <!-- CV 2 asientos -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/cv_2asientos"
                app:cardBackgroundColor="@color/bg_cardView_selected"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/cd_mesa"
                        android:src="@drawable/mesa_restaurante"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dos_asientos"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_marginBottom="15dp"
                    />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- CV 4 asientos -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:id="@+id/cv_4asientos"
                app:cardBackgroundColor="@color/bg_cardView"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/cd_mesa"
                        android:src="@drawable/mesa_restaurante"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cuatro_asientos"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_marginBottom="15dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- CV 8 asientos -->
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/cv_8asientos"
                app:cardBackgroundColor="@color/bg_cardView"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/cd_mesa"
                        android:src="@drawable/mesa_restaurante"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ocho_asientos"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_marginBottom="15dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/introduce_tu_nombre"
            android:textSize="25sp"
            android:textColor="@color/title_color"
            android:textStyle="bold"
            android:textAllCaps="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/text_name"
            android:autofillHints="@string/hint"
            android:hint="@string/hint"
            android:inputType="text"
            android:text=""
            android:padding="5dp"
            android:background="@color/bg_textView"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            android:layout_gravity="center"
            >

            <!-- CV Hora Reserva -->
            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/cv_time"
                app:cardBackgroundColor="@color/bg_textView"
                app:cardCornerRadius="30dp"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/hora_default"
                    android:textSize="35sp"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:id="@+id/text_time"
                    />

            </androidx.cardview.widget.CardView>

            <!-- CV Botón Hora Atrás -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/cd_btn_less_time"
                app:fabCustomSize="60dp"
                android:src="@drawable/arrow_left"
                app:maxImageSize="60dp"
                android:id="@+id/btn_less_time"
                app:layout_constraintTop_toTopOf="@id/cv_time"
                app:layout_constraintLeft_toLeftOf="@id/cv_time"
                />

            <!-- CV Botón Hora Adelante -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/cd_btn_more_time"
                app:fabCustomSize="60dp"
                android:src="@drawable/arrow_right"
                app:maxImageSize="60dp"
                android:id="@+id/btn_more_time"
                app:layout_constraintTop_toTopOf="@id/cv_time"
                app:layout_constraintRight_toRightOf="@id/cv_time"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!-- Botón Confirmar Reserva-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/cd_btn_add_reserva"
        app:fabCustomSize="60dp"
        android:src="@drawable/img_confirmar_reserva"
        app:maxImageSize="55dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:id="@+id/btn_add_reserva"
        />

</androidx.constraintlayout.widget.ConstraintLayout>